--- a/appointment-service/src/main/resources/application.properties
+++ b/appointment-service/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/appointment-service
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
+server.port=8082
 
 # Hibernate/JPA Properties
 spring.jpa.hibernate.ddl-auto=create-drop
