--- a/patient-service/src/main/resources/application.properties
+++ b/patient-service/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=patient-service
 
 spring.data.mongodb.uri=mongodb+srv://feresbenaissa15:root@patient-service.ifzlb7z.mongodb.net/?retryWrites=true&w=majority&appName=patient-service
 spring.data.mongodb.database=patient-service
-
+server.port=8081
 spring.data.mongodb.auto-index-creation=true
 spring.main.banner-mode=off
 logging.level.org.springframework.data.mongodb=DEBUG
