--- a/patient-service/src/main/resources/application.properties
+++ b/patient-service/src/main/resources/application.properties
@@ -8,4 +8,5 @@ spring.data.mongodb.database=patient-service
 server.port=8081
 spring.data.mongodb.auto-index-creation=true
 spring.main.banner-mode=off
-logging.level.org.springframework.data.mongodb=DEBUG
+#logging.level.org.springframework.data.mongodb=DEBUG
+#debug=true
