--- a/appointment-service/src/main/resources/application.properties
+++ b/appointment-service/src/main/resources/application.properties
@@ -7,7 +7,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 server.port=8082
 
 # Hibernate/JPA Properties
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=false
+#debug= true
