--- a/appointment-service/src/main/resources/application.properties
+++ b/appointment-service/src/main/resources/application.properties
@@ -12,3 +12,8 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=false
 #debug= true
+
+#feign configuration
+patient.service.url=http://localhost:8081
+feign.client.config.default.connect-timeout=5000
+feign.client.config.default.read-timeout=5000
