--- a/appointment-service/src/main/resources/application.properties
+++ b/appointment-service/src/main/resources/application.properties
@@ -17,3 +17,8 @@ spring.jpa.properties.hibernate.format_sql=false
 patient.service.url=http://localhost:8081
 feign.client.config.default.connect-timeout=5000
 feign.client.config.default.read-timeout=5000
+
+spring.cloud.openfeign.circuitbreaker.enabled=true
+
+#eureka server
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
