--- a/patient-service/src/main/resources/application.properties
+++ b/patient-service/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.data.mongodb.auto-index-creation=true
 spring.main.banner-mode=off
 #logging.level.org.springframework.data.mongodb=DEBUG
 #debug=true
+
+# partie eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
