feat: LEARN-009 Add KeyCloack Server + create docker compose file

--- a/api-gateway/src/main/resources/application-docker.properties
+++ b/api-gateway/src/main/resources/application-docker.properties
@@ -1,7 +1,9 @@
 # Basic config
 spring.application.name=api-gateway
 server.port=8080
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+
+# Eureka - use service name instead of localhost
+eureka.client.serviceUrl.defaultZone=http://service-registry:8761/eureka/
 
 # Gateway config (REACTIVE - remove all mvc.routes)
 spring.cloud.gateway.discovery.locator.enabled=true
@@ -17,8 +19,8 @@ spring.cloud.gateway.routes[1].id=appointment-service
 spring.cloud.gateway.routes[1].uri=lb://appointment-service
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/v1/appointment/**
 
-# Security
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9090/realms/hospital-service-realm
+# Security - use auth service container name instead of localhost
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloak:9090/realms/hospital-service-realm
 
 # Logging
 logging.level.org.springframework.cloud.gateway=DEBUG
