--- a/patient-service/src/main/resources/application.properties
+++ b/patient-service/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.application.name=patient-service
 #spring.data.mongodb.database=productDB
 
 spring.data.mongodb.uri=mongodb+srv://feresbenaissa15:root@patient-service.ifzlb7z.mongodb.net/?retryWrites=true&w=majority&appName=patient-service
+# MongoDB Configuration (for Docker)
+#spring.data.mongodb.uri=mongodb://feresbenaissa15:root@mongodb:27017/patient-service?authSource=admin
 spring.data.mongodb.database=patient-service
 server.port=8081
 spring.data.mongodb.auto-index-creation=true
@@ -11,5 +13,5 @@ spring.main.banner-mode=off
 #logging.level.org.springframework.data.mongodb=DEBUG
 #debug=true
 
-# partie eureka
+# witch address the eureka discovery service is running to register itself
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
